--- a/tests/test.install.both.local.yml
+++ b/tests/test.install.both.local.yml
@@ -2,9 +2,8 @@
 - hosts: localhost
   remote_user: root
   vars:
-    cs_install_agent: false
     cs_bouncers:
       cs-firewall-bouncer:
         version: v0.0.12
   roles:
-    - ../../ansible-role-crowdsec
+    - ansible-role-crowdsec
