--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,10 +13,14 @@ cs_bouncers_official:
   cs-firewall-bouncer:
     base_url: https://github.com/crowdsecurity/cs-firewall-bouncer/releases/download/
     tarball: cs-firewall-bouncer.tgz
-    deb: crowdsec-firewall-bouncer-iptables
+    deb: crowdsec-firewall-bouncer-nftables
+    dnf: crowdsec-firewall-bouncer-nftables
   cs-nginx-bouncer:
     base_url: https://github.com/crowdsecurity/cs-nginx-bouncer/releases/download/
     tarball: cs-nginx-bouncer.tgz
+    deb: crowdsec-nginx-bouncer
   cs-custom-bouncer:
     base_url: https://github.com/crowdsecurity/cs-custom-bouncer/releases/download/
     tarball: cs-custom-bouncer.tgz
+    deb: crowdsec-custom-bouncer
+    dnf: crowdsec-custom-bouncer
