--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,11 @@
 name: master and pr builds
 on:
   push:
-    branches: 
-    - master
+    branches:
+    - main
   pull_request:
-    branches: 
-    - master
+    branches:
+    - main
   workflow_dispatch:
 
 jobs:
@@ -18,9 +18,11 @@ jobs:
       uses: ansible/ansible-lint-action@master
       with:
         targets: "**/*.yml"
+        override-deps: |
+          ansible-lint==5.3.1
     - name: Install Dependencies
       run: pip install ansible
     - name: Create ansible.cfg with correct roles_path
       run: printf '[defaults]\nroles_path=../:./' >ansible.cfg
     - name: Run ansible syntax-check
-      run: ansible-playbook tests/test.yml -i tests/inventory --syntax-check
+      run: ansible-playbook tests/test.install.both.yml -i tests/inventory --syntax-check
