--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,10 +40,10 @@ jobs:
       - name: Set current version
         run: echo $RELEASE_VERSION > ./VERSION
       - name: Create changelog
-        run: auto-changelog --ignore-commit-pattern "\[?ci|docu|meta\]?|fixup"
+        run: auto-changelog --ignore-commit-pattern "\[?ci|docu|Merge|meta\]?|fixup" --release-summary 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: "[meta] Update changelog, bump version"
+          commit_message: "meta: Update changelog, bump version"
           file_pattern: ./VERSION ./CHANGELOG.md
           commit_user_name: My GitHub Actions Bot
           commit_user_email: ci@wyssmann.com
@@ -61,7 +61,7 @@ jobs:
       - name: Install auto-changelog
         run: sudo npm install -g auto-changelog
       - name: Create release notes
-        run: auto-changelog --ignore-commit-pattern "\[?ci|docu|meta\]?|fixup" --starting-version $RELEASE_VERSION -o RELEASENOTES.md
+        run: auto-changelog --ignore-commit-pattern "\[?ci|docu|meta\]?|fixup" --starting-version $RELEASE_VERSION -o RELEASENOTES.md --release-summary 
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
