--- a/tasks/install_agent_rhel.yml
+++ b/tasks/install_agent_rhel.yml
@@ -1,9 +1,19 @@
+# - name: Enable EPEL Repository on CentOS 8
+#   dnf:
+#     name: epel-release
+#     state: latest
+#   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts['distribution_major_version'] == '8'
+# - name: Enable EPEL Repository on CentOS 7
+#   yum:
+#     name: epel-release
+#     state: latest
+#   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts['distribution_major_version'] == '7'
+
 - name: install required packages
   yum:
     name:
-    - pygpgme
+    #- pygpgme
     - yum-utils
-
     state: present
 
 # https://packagecloud.io/crowdsec/crowdsec/install#manual-deb
@@ -11,7 +21,9 @@
   yum_repository:
     name: crowdsec
     description: crowdsec repository
-    gpgkey: https://packagecloud.io/crowdsec/crowdsec/gpgkey
+    gpgkey:
+      - https://packagecloud.io/crowdsec/crowdsec/gpgkey/crowdsec-crowdsec-B78D1222C9AD2D5D.pub.gpg
+      - https://packagecloud.io/crowdsec/crowdsec/gpgkey/crowdsec-crowdsec-FED78314A2468CCF.pub.gpg
     baseurl: https://packagecloud.io/crowdsec/crowdsec/el/$releasever/$basearch/
     state: present
     file: crowdsec
