--- a/tasks/install_bouncers_debian.yml
+++ b/tasks/install_bouncers_debian.yml
@@ -1,5 +1,5 @@
-- name: install bouncer {{ cs_bouncer.key }}
-  apt: 
+- name: Install bouncer {{ cs_bouncer.key }}
+  ansible.builtin.apt:
     name: "{{ cs_bouncers_official[cs_bouncer.key].deb }}"
     state: present
-    update_cache: yes
+    update_cache: true
