--- a/tasks/install_agent_rhel.yml
+++ b/tasks/install_agent_rhel.yml
@@ -1,24 +1,24 @@
 # - name: Enable EPEL Repository on CentOS 8
-#   dnf:
+#   ansible.builtin.dnf:
 #     name: epel-release
 #     state: latest
 #   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts['distribution_major_version'] == '8'
 # - name: Enable EPEL Repository on CentOS 7
-#   yum:
+#   ansible.builtin.yum:
 #     name: epel-release
 #     state: latest
 #   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts['distribution_major_version'] == '7'
 
-- name: install required packages
-  yum:
+- name: Install required packages
+  ansible.builtin.yum:
     name:
-    #- pygpgme
-    - yum-utils
+    # - pygpgme
+      - yum-utils
     state: present
 
 # https://packagecloud.io/crowdsec/crowdsec/install#manual-deb
-- name: add crowdsec apt repository
-  yum_repository:
+- name: Add crowdsec apt repository
+  ansible.builtin.yum_repository:
     name: crowdsec
     description: crowdsec repository
     gpgkey:
@@ -28,8 +28,8 @@
     state: present
     file: crowdsec
 
-- name: install crowdsec
-  dnf: 
+- name: Install crowdsec
+  ansible.builtin.dnf:
     name: crowdsec
     state: present
-    update_cache: yes
+    update_cache: true
